# sdl2-fetch

./: CMakeLists.txt  main.cpp
